Fix too large fonts on all screens

--- a/css/mentors-screen.css
+++ b/css/mentors-screen.css
@@ -50,7 +50,7 @@ section#mentors h5 {
     left: 0;
     top: 3vw;
     font-weight: 400;
-    font-size: 4em;
+    font-size: 3.4em;
 }
 
 section#mentors .inner-cell > div {
